for commit of code, updated readme

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
-This file was created by IntelliJ IDEA 12.0.4 for binding GitHub repository
+There is nothing super-interesting here
+=======================================
+
+This is a plugin for IntelliJ to gather historical data from VCS.
+See also [Delta Flora](https://github.com/michaelfeathers/delta-flora) by Michael Feathers.
+
+(Note that this code is intended to be executed within [intellij-eval](https://github.com/dkandalov/intellij_eval) plugin.)
